--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -80,8 +80,14 @@ jobs:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CF_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CF_ACCOUNT_ID }}
         run: |
-          echo "CLOUDFLARE_API_TOKEN: $CLOUDFLARE_API_TOKEN"
-          echo "CLOUDFLARE_ACCOUNT_ID: $CLOUDFLARE_ACCOUNT_ID"
+          if [ -z "$CLOUDFLARE_API_TOKEN" ]; then
+            echo "Error: CLOUDFLARE_API_TOKEN is not set."
+            exit 1
+          fi
+          if [ -z "$CLOUDFLARE_ACCOUNT_ID" ]; then
+            echo "Error: CLOUDFLARE_ACCOUNT_ID is not set."
+            exit 1
+          fi
           R2_BUCKET="cloudpaste-files"
           R2_BINDING="FILE_STORE"
           echo "Checking for R2 bucket: $R2_BUCKET"
