--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -80,28 +80,16 @@ jobs:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CF_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CF_ACCOUNT_ID }}
         run: |
-          if [ -z "$CLOUDFLARE_API_TOKEN" ]; then
-            echo "Error: CLOUDFLARE_API_TOKEN is not set."
-            exit 1
-          fi
-          if [ -z "$CLOUDFLARE_ACCOUNT_ID" ]; then
-            echo "Error: CLOUDFLARE_ACCOUNT_ID is not set."
-            exit 1
-          fi
           R2_BUCKET="cloudpaste-files"
-          R2_BINDING="FILE_STORE"
           echo "Checking for R2 bucket: $R2_BUCKET"
           
-          # List buckets and check if our bucket exists
-          BUCKET_LIST=$(wrangler r2 bucket list)
-          BUCKET_EXISTS=$(echo "$BUCKET_LIST" | grep -w "$R2_BUCKET" || true)
-          
-          if [ -z "$BUCKET_EXISTS" ]; then
-              echo "R2 bucket $R2_BUCKET does not exist. Creating..."
-              CREATE_OUTPUT=$(wrangler r2 bucket create "$R2_BUCKET" --location apac)
-              echo "R2 bucket $R2_BUCKET created successfully"
+          # 使用 try-catch 方式处理错误
+          if ! wrangler r2 bucket list 2>/dev/null | grep -q "$R2_BUCKET"; then
+            echo "R2 bucket $R2_BUCKET does not exist. Creating..."
+            wrangler r2 bucket create "$R2_BUCKET"
+            echo "R2 bucket $R2_BUCKET created successfully"
           else
-              echo "R2 bucket $R2_BUCKET already exists"
+            echo "R2 bucket $R2_BUCKET already exists"
           fi
 
       - name: Update wrangler.toml
